--- a/qsequoia2/scripts/tools_settings/tools_settings.ui
+++ b/qsequoia2/scripts/tools_settings/tools_settings.ui
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>tools</class>
+
  <widget class="QDialog" name="tools">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>534</width>
-    <height>422</height>
-   </rect>
-  </property>
   <property name="windowTitle">
    <string>tools</string>
   </property>
-  <widget class="QTabWidget" name="tabWidget">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>571</width>
-     <height>431</height>
-    </rect>
-   </property>
-   <property name="currentIndex">
-    <number>-1</number>
-   </property>
-  </widget>
+
+  <layout class="QVBoxLayout" name="rootLayout">
+
+   <item>
+    <widget class="QTabWidget" name="tabWidget">
+     <property name="currentIndex">
+      <number>-1</number>
+     </property>
+    </widget>
+   </item>
+
+  </layout>
  </widget>
+
  <resources/>
  <connections/>
 </ui>
+
